2005-10-23 Pierrick LE GALL

	* bug 181 fixed: "Parameters not created in phpwebgallery_config
	during upgrade". gallery_title and gallery_description had not
	been added to config table. (use|show)_(exif|iptc) and
	authorize_remembering have also been removed...

2005-10-22 chrisaga

	* bug 177 fixed: icon tools wrong position in Safari and Konqueror
	Needed a little trick to fix it. Put the trick in a fix-khtml.css
	Loading in header.tpl and protected from IE, Geko and Opera,
	just in case (couldn't foud a safari css-only filter wich validate)
	
	* bug fixed: issue in the FORM in remote_site.tpl which prevented
	HTML validation (still something to do with the TABLE).

2005-10-22 Pierrick LE GALL

	* bug fixed: link on a single day in
	Administration>General>History was missing

2005-10-22 Pierrick LE GALL

	* bug 173 fixed: due to phpBB user identifiers management, the
	method to find the next user identifier has changer to MAX+1.

	* improvement: information message when new user added

	* bug fixed: language item "Username" used instead of "login".
	
2005-10-20 chrisaga

	* bug 176 fixed: need a javascript to handle transparent PNG
	background in IE (tribute to Bob Osola
	http://homepage.ntlworld.com/bobosola/index.htm)

	* display: fixed another IE childselector bug in Categories
	Management admin page and improved display of this page in all
	browsers too.

2005-10-18 Pierrick LE GALL

	* bug 174 fixed: use_exif_mapping configuration parameter was not
	used to list database fields to update from EXIF values.

2005-10-18 Pierrick LE GALL

	* bug 172 fixed: crash when changing password with an external
	users table. The same kind of correction was also made in
	picture.php and register.php.

2005-10-18 Pierrick LE GALL

	* bug 159 and 166 fixed: parameter "options" for mail() function
	disabled by default.

2005-10-18 chrisaga

	* display : smaller font-size and, as requested, fonts more like 1.4

	* bug 165 fixed : La largeur par défaut en PIXELS pas en Kb
